Ticket #2442 Fixing the page count in the views pager by mirroring the element-invisible and current-pager classes.

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -2947,6 +2947,13 @@ select#edit-sort-by {
   background: white url(../images/small-up-arrow.png) no-repeat;
   background-position: 8px 4px;
 }
+.pager .pager-current {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+  height: 1px;
+}
 
 .gallery-thumbnail-text {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
